Don't display None for missing time

--- a/home/templates/home/photo_page.html
+++ b/home/templates/home/photo_page.html
@@ -16,7 +16,7 @@
             {{ page.description|richtext }}
             <p>Autor: {{ page.author }}</p>
             <p>Ort: {{ page.location }}</p>
-            <p>Datum: {{ page.date }} {{ page.time }}</p>
+            <p>Datum: {{ page.date }} {{ page.time|default_if_none:"" }}</p>
         </figcaption>
     </figure>   
 
