--- a/beobgrp_site/static/css/beobgrp_site.scss
+++ b/beobgrp_site/static/css/beobgrp_site.scss
@@ -98,3 +98,11 @@ $background-opacity: 0.7;
   padding: 0.5rem;
   border-radius: 0.5rem;
 }
+
+.icon-inline {
+  height: 1em;
+  display: block;
+  object-fit: contain;
+  max-height: 100%;
+  filter: brightness(0) invert(1);
+}
