--- a/home/templates/home/photo_page.html
+++ b/home/templates/home/photo_page.html
@@ -9,8 +9,12 @@
 
 {% block content %}
 
-    <h1>{{ page.title }}</h1>
-    <figure class="image">
+<div class="row is-flex is-align-items-center is-justify-content-space-between">
+    <img class="block-h2 icon-inline" src="{% static 'icons/left.svg' %}" alt="Left Arrow">
+    <h2>{{ page.title }}</h2>
+    <img class="block-h2 icon-inline" src="{% static 'icons/right.svg' %}" alt="Right Arrow">
+  </div>
+<figure class="image">
         {% image page.photo original class="is-fluid" %}
         <figcaption>
             {{ page.description|richtext }}
