Add images to event cards and improve layout

--- a/beobgrp_site/templates/base.html
+++ b/beobgrp_site/templates/base.html
@@ -63,7 +63,7 @@
         </header>
                 
         {# Main Layout #}
-        <div class="container mt-3">
+        <div class="container mt-3 is-fluid">
             <div class="columns">
                 <aside class="aside-column is-one-fifth">
                     {% block sidebar %}{% endblock %}
